--- a/Busan-For-U-Front/Html/bcommunity.html
+++ b/Busan-For-U-Front/Html/bcommunity.html
@@ -66,7 +66,7 @@
 	</table>
 
    
-	<div style="clear:both;"></div>
+	<div style="clear:both;">
 	<form class="row g-3 align-items-center" action="" method="get"> 
 		<div class="col-auto">
 		<select class="form-select" name="condition" id="condition">
